VO-2911 Text-wrapping fix.

--- a/app/styles/common/_tables.scss
+++ b/app/styles/common/_tables.scss
@@ -167,7 +167,7 @@
     }
 
     &.date {
-      min-width: 100px;
+      min-width: 110px;
     }
 
     &.description {
